--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javafx 17"/>
+	<classpathentry kind="lib" path="C:/Users/phill/derby/db-derby-10.16.1.1-bin/lib/derby.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
